[gd_scene load_steps=4 format=3 uid="uid://to7upd7dh6pu"]

[ext_resource type="Script" path="res://attractor_area.gd" id="1_t88um"]
[ext_resource type="PackedScene" uid="uid://bpqjffo2n437r" path="res://segment.tscn" id="2_3ownf"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_5ol1b"]
points = PackedVector3Array(-0.404649, 0.188683, -2.88232, -0.348036, 0.564504, -2.80045, 1.82822, 0.445489, -2.52514, 0.0664561, 0.117163, -2.82956, -0.453175, -0.177474, -2.68341, -1.86582, 0.00505221, -2.64763, -1.8119, 0.388881, -2.73435, -1.75461, 0.763046, -2.6161, -1.7162, 1.00494, -2.47056, -0.293444, 0.900009, -2.57001, 1.2978, 1.71544, -1.13888, 1.88348, 0.793697, -2.03637, 2.89915, 1.00494, -1.08795, 2.31213, 0.375075, -2.09277, 2.0695, 0.191168, -2.37899, 1.83158, 0.233693, -2.55303, -0.228069, 1.2993, -2.26317, -0.186283, 1.55473, -2.03698, 0.121722, 1.47851, -2.01151, 0.0233219, -0.203707, -2.65067, 1.79115, -0.00212729, -2.56031, -0.47609, -0.380986, -2.38445, -1.60701, -0.247612, -2.50513, -1.89547, -0.216961, -2.51362, -2.17719, -0.17057, -2.50028, -2.31266, 0.0878931, -2.54515, -2.27964, 0.452117, -2.60701, -2.2028, 0.795906, -2.50452, -1.99455, 1.01129, -2.4457, -0.579882, 1.58952, -2.00545, 0.832087, 1.82092, -1.19104, 0.865785, 1.99268, -0.800507, 1.3133, 1.8872, -0.754419, 2.93824, 1.34348, -0.582198, 2.99755, 1.12313, -0.782921, 3.11752, 0.745649, -0.847806, 2.30673, 0.146158, -2.14674, 2.25753, -0.113134, -2.14007, -0.15528, 1.71323, -1.70527, 1.77902, -0.402249, -2.15341, 1.94953, -0.178026, -2.30137, -0.193022, -0.472111, -2.15523, -1.9103, -0.358895, -2.24983, -2.34973, -0.215304, -2.21526, -2.6146, -0.125836, -2.03395, -2.47037, -0.0126204, -2.34928, -2.56136, 0.26462, -2.46632, -2.53372, 0.482768, -2.46086, -2.49328, 0.687384, -2.44206, -2.32479, 0.915197, -2.30441, -2.13608, 1.15074, -2.14249, -1.94804, 1.3827, -1.98058, -1.6488, 1.39954, -2.04911, -1.68587, 1.18691, -2.29652, -0.900692, 1.57737, -1.93813, -1.1386, 1.57903, -1.86233, -0.689065, 1.68175, -1.7459, 0.642027, 2.0642, -0.510642, 0.878591, 2.04183, -0.559761, 1.16233, 2.00428, -0.579773, 2.76773, 1.57074, 1.10423, 3.21794, 1.37303, 1.08786, 3.42822, 1.2079, 0.838017, 3.2813, 0.700915, -0.375412, 3.09326, 0.34111, -0.38936, 3.2139, -0.330453, 1.24613, 2.09713, -0.346469, -1.83626, 1.84102, -0.455267, -1.83686, 0.00782061, -0.739135, 0.0872796, -1.91771, -0.485918, -1.77865, 0.770082, -0.694124, -0.262013, 0.487688, -0.737754, 0.0793962, -2.37332, -0.321065, -1.76409, -2.64425, 0.121306, -2.19525, -2.62538, -0.148203, -1.75197, -3.17804, 0.111365, 0.177028, -3.36675, 0.489395, 0.184912, -2.67458, 0.492156, -2.19828, -2.53372, 0.829319, -2.1619, -2.44071, 1.06155, -1.97755, -1.60364, 1.56633, -1.6792, -2.27829, 1.28218, -1.69132, -2.01544, 1.43765, -1.68829, -1.41897, 1.65579, -1.51243, -1.12041, 1.66435, -1.61977, 0.642027, 2.0642, -0.507004, -1.0557, 1.82368, 0.222509, 0.879939, 2.03741, -0.459097, 1.16435, 1.9982, -0.448788, 2.75762, 1.42853, 1.57481, 3.17616, 1.28191, 1.52084, -1.05773, 1.73449, 0.69551, 0.840174, 1.44289, 1.60573, 3.44372, 1.19078, 1.32618, 3.43766, 1.201, 1.07634, 3.48214, 0.995829, 1.06603, 3.43361, 1.01764, 0.732501, 3.47001, 0.610619, 1.04844, 3.2139, -0.330453, 1.24856, 2.7219, -0.668444, 1.30071, 2.71853, -0.659331, 1.10666, 2.94903, -0.472663, 1.01873, 0.0159082, -0.756531, 0.563312, -1.65352, -0.472663, 2.37709, -2.78242, -0.13412, 0.159442, -0.454523, -0.689982, 0.573621, -1.35023, -0.539212, 2.43894, 0.540257, -0.740791, 0.584537, -3.1194, 0.121582, 0.653667, -3.40112, 0.611171, 0.479628, -3.40314, 0.617522, 0.341972, -3.38966, 0.711961, 0.346217, -2.66178, 0.85638, -1.70467, -3.26498, 0.842021, 0.199466, -2.46902, 1.1165, -1.69618, -2.3167, 1.3178, -1.21226, -2.92597, 1.06735, -0.128603, -2.97046, 1.09607, 0.219477, -2.05588, 1.45946, -1.20983, -1.67171, 1.59698, -1.20923, -1.59893, 1.71433, 0.187944, -1.5686, 1.6569, 0.692478, 2.99014, 1.23828, 1.80949, 1.46158, 1.04305, 2.80097, 1.6267, 1.01902, 2.79733, -1.42706, 1.56688, 1.03389, -1.11906, 1.15516, 2.1224, -1.06042, 1.37055, 1.59785, 3.45248, 0.98644, 1.38136, 3.25905, 1.00411, 1.62393, 3.42148, 0.601782, 1.41108, 3.34061, 0.22817, 1.36014, 3.25568, -0.144061, 1.28919, 3.13707, -0.137158, 1.52993, 2.8176, -0.374359, 1.79433, 2.93555, -0.466312, 1.43533, 0.316499, -0.749628, 2.71668, -1.65621, -0.176921, 2.84888, -1.80516, -0.249821, 2.55052, -2.76489, -0.086625, 0.638507, -1.33473, -0.472111, 2.68029, 0.210012, -0.734164, 2.7191, -3.01224, 0.170182, 0.936862, -3.29194, 0.458192, 0.646391, -3.38764, 0.70561, 0.483872, -1.92243, 0.165487, 2.72577, -2.93002, 1.04774, 0.693691, -1.81527, 1.61879, 0.530566, -1.81864, 1.62846, 0.321354, -1.80718, 1.62376, 0.00298834, -1.75192, 1.5608, 0.844687, 3.02721, 1.02869, 1.84102, 1.93335, 0.937012, 2.72396, 2.04658, 0.65701, 2.83311, 1.27286, 0.86494, 2.90406, 1.75003, 0.808884, 2.90467, -0.975502, 1.04222, 2.37588, -1.35899, 0.651211, 2.7852, -0.139779, 0.151957, 3.2764, -1.5841, 1.47465, 1.18246, -1.61375, 1.26948, 1.66819, -1.48368, 1.15792, 1.98353, -1.29833, 1.0378, 2.2928, 3.26242, 0.614485, 1.65303, 3.20581, 0.237283, 1.60149, 2.90724, -0.117552, 1.8489, 2.04052, 0.35326, 2.85373, 1.95223, 0.0942442, 2.7943, 0.405463, -0.419645, 3.21757, 0.128461, -0.39645, 3.23637, 0.0812833, -0.597477, 2.91376, -1.68519, 0.12241, 2.90952, -2.04442, -0.0573545, 2.40559, -1.30373, -0.29207, 2.89072, -0.171456, -0.339566, 3.23395, -1.24981, 0.0522715, 3.05324, -2.96035, 0.780442, 1.01812, -3.19758, 0.811922, 0.661551, -1.98039, 0.494089, 2.45532, -1.58073, 0.420913, 2.8798, -2.86464, 0.982022, 0.959299, -2.27559, 1.20928, 1.27766, -2.32749, 1.27804, 0.963544, -2.08688, 1.3341, 1.14062, -1.944, 1.25015, 1.53478, 1.68062, 0.397718, 3.0502, 0.208664, 0.142016, 3.29095, 1.21086, 0.465371, 3.0781, -1.54096, 0.806675, 2.47715, -1.72698, 0.581072, 2.62147, -1.21004, 0.472551, 2.91619, -0.202458, -0.111201, 3.27276, 0.164182, -0.166981, 3.31217, -1.8092, 1.13887, 1.84527, 2.97531, 0.259374, 1.87195, 0.496449, -0.213095, 3.25275, -1.87391, 0.742888, 2.31827, -2.42387, 0.963244, 1.4893, -2.12597, 1.05244, 1.66759, 0.529474, 0.0580704, 3.25942)

[node name="AttractorArea" type="StaticBody3D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_t88um")

[node name="SpawnArea" type="CollisionShape3D" parent="."]
transform = Transform3D(3.13615, -0.218467, 2.43215, -0.264479, 3.90512, 0.69181, -2.42758, -0.707688, 3.06669, -1.4444, -5.89616, -0.437206)
shape = SubResource("ConvexPolygonShape3D_5ol1b")

[node name="PointsParent" type="Node3D" parent="."]

[node name="SegmentsParent" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.232028, 2.39719, 0.0511147)

[node name="Segment" parent="SegmentsParent" instance=ExtResource("2_3ownf")]
